--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -1,6 +1,6 @@
-@inproceedings{HTTP2021,
-   title = {An overview of HTTP - HTTP | MDN},
-   url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview},
+@misc{HTTP2021,
+   title = {\text{An overview of HTTP}},
+   note={\url{https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview}, accessed 2021-03-10},
 }
 
 @inproceedings{Mahmoud2016,
@@ -15,6 +15,10 @@
    publisher = {Institute of Electrical and Electronics Engineers Inc.},
    title = {Internet of things (IoT) security: Current status, challenges and prospective measures},
    year = {2016},
+}
+@misc{Artemis2021,
+    title = {\text{Artemis-IA News Embedded Intelligence: Trends \& Challenges book release}},
+    note={\url{https://artemis-ia.eu/news/embedded-intelligence-tsrends-challenges-book-release.html}, accessed 2021-04-21},
 }
 @inproceedings{Al-Sarawi2017,
    abstract = {Internet of Things (IoT) consists of smart devices that communicate with each other. It enables these devices to collect and exchange data. Besides, IoT has now a wide range of life applications such as industry, transportation, logistics, healthcare, smart environment, as well as personal, social gaming robot, and city information. Smart devices can have wired or wireless connection. As far as the wireless IoT is the main concern, many different wireless communication technologies and protocols can be used to connect the smart device such as Internet Protocol Version 6 (IPv6), over Low power Wireless Personal Area Networks (6LoWPAN), ZigBee, Bluetooth Low Energy (BLE), Z-Wave and Near Field Communication (NFC). They are short range standard network protocols, while SigFox and Cellular are Low Power Wide Area Network (LPWAN).standard protocols. This paper will be an attempt to review different communication protocols in IoT. In addition, it will compare between commonly IoT communication protocols, with an emphasis on the main features and behaviors of various metrics of power consumption security spreading data rate, and other features. This comparison aims at presenting guidelines for the researchers to be able to select the right protocol for different applications.},
@@ -109,20 +113,15 @@
    title = {IoT security: Ongoing challenges and research opportunities},
    year = {2014},
 }
-@patent{Pound2021,
-   author = {Michael Pound},
-   title = {Secret Key Exchange (Diffie-Hellman) - Computerphile - YouTube},
-   url = {https://www.youtube.com/watch?v=NmM9HA2MQGI},
-}
 @inproceedings{Delsing2017,
    author = {Delsing Jerker},
    title = {IoT Automation: Arrowhead Framework - 1st Edition - Jerker Delsing -},
    url = {https://www.routledge.com/IoT-Automation-Arrowhead-Framework/Delsing/p/book/9780367658144},
    year = {2017},
 }
-@inproceedings{Github2021,
+@misc{Github2021,
    title = {eclipse-arrowhead/core-java-spring},
-   url = {https://github.com/eclipse-arrowhead/core-java-spring},
+   note={\url{https://github.com/eclipse-arrowhead/core-java-spring}, accessed 2021-03-10}
 }
 @report{Hozdic2015,
    abstract = {Parallel to the development of information-communication technologies, the Internet, wireless networks, production networks, developed and industrial production which experienced a strong and profound changes. Factories have become more flexible than ever to complex modern market turbulence. Modern concepts of production systems require vertical and horizontal integration of all participants in the production process. This integration determines the foundation of a new, radical change in the mode of production by German industrialists called the industry is 4.0. In this, the smart production environment, structuring the smart factory. Smart factory is a production solution in a flexible and efficient way should be to meet the needs of today's market, and achieves integration between the various industrial and non-industrial partners who build dynamic, and very often and virtual organizations. This type of integration, linking the physical components of the production system and digital, abstract, virtual components into a single system called cyber-physical production systems. Systems are the backbone for the smart factory. Cyber-physical systems of production will be structured so that they can respond to almost any change in the market in time within really smart factories, but also beyond its borders. This not only makes production faster and in accordance with the specific requirements of individual customers, but also allows to production processes within the company are optimized through a network of global cooperation, adaptive and evolutionary and self-organizing. The potential for savings and innovation in these production systems and production operators is huge. Implementation of cyber-physical production systems in smart factories providing management with real-time, which is one of the fundamental principles of a new era in the sphere of industrial production.},
@@ -215,9 +214,9 @@
    volume = {20},
    year = {2018},
 }
-@inproceedings{MQTT2021,
-   title = {Getting Started with MQTT},
-   url = {https://www.hivemq.com/blog/how-to-get-started-with-mqtt/},
+@misc{MQTT2021,
+   title = {\text{Getting Started with MQTT}},
+   note={\url{https://www.hivemq.com/blog/how-to-get-started-with-mqtt}, accessed 2021-03-18}
 }
 
 @article{Gubbi2013,
@@ -236,9 +235,31 @@
    year = {2013},
 }
 
-@inproceedings{AC2021,
+@misc{AC2021,
    title = {Arrowhead Consortia},
-   url = {https://github.com/arrowhead-f},
+   note={\url{https://github.com/arrowhead-f}, accessed 2021-03-10}
 }
+
+@misc{AT2021,
+   title = {Arrowhead Tools},
+   note={\url{https://arrowhead.eu/arrowheadtools/}, accessed 2021-04-22}
+}
+
+@misc{AZURE2021,
+   title = {\text{Getting started with the STMicroelectronics B-L475E-IOT01A / B-L4S5I-IOTOA1 Discovery kits - Code Samples | Microsoft Docs}},
+   note = {\url{https://docs.microsoft.com/en-us/samples/azure-rtos/getting-started/getting-started-with-the-stmicroelectronics-b-l475e-iot01a--b-l4s5i-iotoa1-discovery-kits/} accessed 2021-04-22}
+}
+
+@article{Guide2020,
+author = {Guide, User and Qualification, Freertos},
+file = {:C\:/Users/albin/Downloads/dm00367435-getting-started-with-xcubeaws-stm32cube-expansion-package-for-amazon-web-services-iot-stmicroelectronics.pdf:pdf},
+number = {September},
+pages = {1--31},
+title = {{User manual Getting started with X-CUBE-AWS STM32Cube Expansion Package for Amazon Web Services {\textregistered} IoT}},
+year = {2020}
+}
+
+
+
 
 
