--- a/Report/main.tex
+++ b/Report/main.tex
@@ -26,6 +26,25 @@
     tabsize=2,
     language=C
 }
+\lstdefinestyle{SQLStyle}{
+    backgroundcolor=\color{backgroundColour},   
+    commentstyle=\color{mGreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{mGray},
+    stringstyle=\color{mPurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2,
+    language=SQL
+}
 
 
 
@@ -33,7 +52,7 @@
 %input "thesisreferences.bib"
 
 \begin{document}
-
+{\parskip=0pt
 \defaultbibliography{thesisreferences.bib}     %% Change this only.
 \defaultbibliographystyle{unsrt}        %% Could be changed if you like 
                                            %% references typeset differently.
@@ -72,7 +91,7 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
   {\theabstract}
   {\thepreface}
   {\thelogo}
-
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Begin Part I
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,6 +100,7 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 %% Initialize part containing the thesis introduction chapters
 \startchapters
 \begin{bibunit}
+
 %------------------------ Start chapter 1 --------------------------
 % The \makechapter command takes three arguments
 %  1) An abbreviated version of the chapter name,
