--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -250,6 +250,12 @@
    note = {\url{https://docs.microsoft.com/en-us/samples/azure-rtos/getting-started/getting-started-with-the-stmicroelectronics-b-l475e-iot01a--b-l4s5i-iotoa1-discovery-kits/} accessed 2021-04-22}
 }
 
+@misc{AWS2021,
+   title = {\text{How AWS IoT works - AWS IoT Core}},
+   note = {\url{https://docs.aws.amazon.com/iot/latest/developerguide/aws-iot-how-it-works.html, accessed on 2021-04-24}},
+}
+
+
 @article{Guide2020,
 author = {Guide, User and Qualification, Freertos},
 file = {:C\:/Users/albin/Downloads/dm00367435-getting-started-with-xcubeaws-stm32cube-expansion-package-for-amazon-web-services-iot-stmicroelectronics.pdf:pdf},
