--- a/Report/main.tex
+++ b/Report/main.tex
@@ -66,7 +66,7 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \def\supervisors{Jan van Deventer}
 \def\supervisorstring{Supervisor:} % Edit here if you have only one supervisor
-\def\dedication{To my dad Bengt-Göran Martinsson a special thanks for proof reading is required...}
+\def\dedication{To my dad Bengt-Göran Martinsson a special thanks for proof reading is required. A special thank to my little sister Hedvig Martinsson for drawing the cover image is also required.}
 
 % Read abstract and preface from separate files.
 % Make sure these exist. See example files.
