--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -265,6 +265,15 @@ title = {{User manual Getting started with X-CUBE-AWS STM32Cube Expansion Packag
 year = {2020}
 }
 
+@misc{WIKIREST2021,
+   title = {\text{Representational state transfer - Wikipedia}},
+   note = {\url{https://en.wikipedia.org/wiki/Representational_state_transfer} accessed on 2021-04-29},
+}
+
+
+
+
+
 
 
 
