--- a/Report/main.tex
+++ b/Report/main.tex
@@ -66,7 +66,7 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \def\supervisors{Jan van Deventer}
 \def\supervisorstring{Supervisor:} % Edit here if you have only one supervisor
-\def\dedication{A special thank you to my little sister Hedvig Martinsson for drawing the cover image is required.}
+\def\dedication{A special thank you to my little sister Hedvig Martinsson, for drawing the cover image, is required.}
 
 % Read abstract and preface from separate files.
 % Make sure these exist. See example files.
@@ -137,8 +137,8 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \makechapter{Conclusions and future work}{Conclusions and future work}{Conclusions and future work\label{ch7}}
 \input{Chapters/conclusions_and_future_work}
-
-\makebib
+\makechapter{References}{References}{References\label{ch8}}
+\input{Chapters/references}
 \end{bibunit}
 
 \end{document}
