--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -266,9 +266,15 @@ year = {2020}
 }
 
 @misc{WIKIREST2021,
-   title = {\text{Representational state transfer - Wikipedia}},
+   title = {\text{RAMI 4.0 - ISA}},
    note = {\url{https://en.wikipedia.org/wiki/Representational_state_transfer} accessed on 2021-04-29},
 }
+
+@misc{RAMI2021,
+   title = {\text{Representational state transfer - Wikipedia}},
+   note = {\url{https://www.isa.org/intech-home/2019/march-april/features/rami-4-0-reference-architectural-model-for-industr} accessed on 2021-05-12},
+}
+
 
 
 
