--- a/Report/main.tex
+++ b/Report/main.tex
@@ -137,8 +137,12 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \makechapter{Conclusions and future work}{Conclusions and future work}{Conclusions and future work\label{ch7}}
 \input{Chapters/conclusions_and_future_work}
+
 \makechapter{References}{References}{References\label{ch8}}
 \input{Chapters/references}
 \end{bibunit}
-
+\appendix
+\renewcommand\chaptername{Appendix}
+\chapter{Flashing the demo on the B-L4S5I-IOT01A board} 
+  \input{Chapters/appendix_a.tex}
 \end{document}
