--- a/Report/main.tex
+++ b/Report/main.tex
@@ -66,7 +66,7 @@ Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \def\supervisors{Jan van Deventer}
 \def\supervisorstring{Supervisor:} % Edit here if you have only one supervisor
-\def\dedication{A special thank you to my little sister Hedvig Martinsson, for drawing the cover image, is required.}
+\def\dedication{}
 
 % Read abstract and preface from separate files.
 % Make sure these exist. See example files.
