--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -246,7 +246,7 @@
 }
 
 @misc{AZURE2021,
-   title = {\text{Getting started with the STMicroelectronics B-L475E-IOT01A / B-L4S5I-IOTOA1 Discovery kits - Code Samples | Microsoft Docs}},
+   title = {\text{Getting started with the STMicroelectronics B-L475E-IOT01A} \\ \text{/ B-L4S5I-IOTOA1 Discovery kits - Code Samples | Microsoft Docs}},
    note = {\url{https://docs.microsoft.com/en-us/samples/azure-rtos/getting-started/getting-started-with-the-stmicroelectronics-b-l475e-iot01a--b-l4s5i-iotoa1-discovery-kits/} accessed 2021-04-22}
 }
 
